Zakonczono analiza danych

--- a/analiza/project/adult_dataset.ipynb
+++ b/analiza/project/adult_dataset.ipynb
@@ -1878,20 +1878,52 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Sprawdźmy zbalansowanie wyników"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "income\n",
+       "<=50K    24720\n",
+       ">50K      7841\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "USAAdult['income'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Jak widać wyniki nie są zbalansowane. Wierszy skupiających się na osobach zarabiających mniej niż 50.000 jest ponad trzykrotnie więcej.\n",
+    "Dlatego ważniejszymi metrykami powinny być F1 i zbalansowana dokładność. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Podsumowanie wyników\n",
-    "W celu przeanalizowania wyników, przyjrzyjmy się dokładnie każdej z metryk:\n",
-    "#### Accuracy\n",
-    "- **Random Forest:** 83.97%\n",
-    "- **XGBoost:** 85.38%\n",
-    "\n",
-    "XGBoost ma niewiele wyższą ogólną dokładność niż Random Forest, co sugeruje, że lepiej radzi sobie z klasyfikacją danych.\n",
+    "W celu przeanalizowania wyników, przyjrzyjmy się dokładnie najważniejszych z metryk:\n",
     "\n",
     "#### Balanced Accuracy\n",
     "- **Random Forest:** 72.89%\n",
     "- **XGBoost:** 74.72% \n",
     "\n",
-    "\n",
-    "Podobnie jak w przypadku ogólnej dokładności, XGBoost osiąga lepsze wyniki również w zakresie balansowanej dokładności, co oznacza lepsze radzenie sobie z obiema klasami wynikowymi, co jest kluczowe w przypadku nierównomiernego rozkładu klas.\n",
+    "Tutaj także niewielka przewaga po stronie XGBoosta. Osiąga on nieco lepsze wyniki również w zakresie balansowanej dokładności, co oznacza lepsze radzenie sobie z obiema klasami wynikowymi, co jest kluczowe w przypadku nierównomiernego rozkładu klas.\n",
     "\n",
     "#### F1 Score\n",
     "- **Random Forest:** 60.75%\n",
@@ -1911,10 +1943,10 @@
     "  - TN: 4712\n",
     "  - FN: 719\n",
     "\n",
-    "XGBoost ma mniejszą liczbę fałszywych pozytywnych (FP) i fałszywych negatywnych (FN) niż Random Forest. To pokazuje, że XGBoost lepiej identyfikuje klasy pozytywne i negatywne.\n",
+    "XGBoost ma mniejszą liczbę fałszywych pozytywnych (FP) i fałszywych negatywnych (FN) niż Random Forest. Wyniki ma lepsze w każdym czynniku, co pokazuje, że XGBoost lepiej identyfikuje klasy pozytywne i negatywne.\n",
     "\n",
-    "#### Podsumowanie:\n",
-    "XGBoost wypada lepiej pod każdym względem w porównaniu z Random Forest w tym zestawie danych. Wykazuje wyższą ogólną skuteczność, lepsze zarządzanie nierównomiernym rozkładem klas oraz efektywniej radzi sobie z identyfikacją rzadszych przypadków. Biorąc pod uwagę wszystkie te aspekty, można uznać XGBoost za bardziej odpowiedni model do tego zadania, choć ostateczny wybór może zależeć także od innych czynników, takich jak czas uczenia i zasoby obliczeniowe."
+    "#### Wnioski:\n",
+    "XGBoost wypada lepiej pod każdym względem w porównaniu z Random Forest w tym zestawie danych. Wykazuje wyższą ogólną skuteczność, lepsze zarządzanie nierównomiernym rozkładem klas oraz efektywniej radzi sobie z identyfikacją rzadszych przypadków. Biorąc pod uwagę wszystkie te aspekty, można uznać XGBoost za bardziej odpowiedni model do tego zadania."
    ]
   }
  ],
